--- a/project-4-api/package.json
+++ b/project-4-api/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "canvas": "^2.8.0",
     "chart.js": "^3.7.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -13,6 +14,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsdom": "^19.0.0",
+    "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
     "yahoo-stock-prices": "^1.1.0"
