--- a/project-4-api/package.json
+++ b/project-4-api/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "canvas": "^2.8.0",
     "chart.js": "^3.7.0",
     "cookie-parser": "~1.4.4",
